--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="col-lg-8 mt-2">
               <label for="Gender" class="form-label">Choose Templates</label>
               <div class="d-flex flex-row gap-2 templates">
-                <div class="form-check col-lg-4">
+                <div class="form-check col-lg-4 pt-2">
                   <input
                     class="form-check-input"
                     type="checkbox"
@@ -264,7 +264,7 @@
                     Template1
                   </label>
                 </div>
-                <div class="form-check col-lg-4">
+                <div class="form-check col-lg-4 pt-2">
                   <input
                     class="form-check-input"
                     type="checkbox"
@@ -276,7 +276,7 @@
                     Template2
                   </label>
                 </div>
-                <div class="form-check col-lg-4">
+                <div class="form-check col-lg-4 pt-2">
                   <input
                     class="form-check-input"
                     type="checkbox"
@@ -313,18 +313,18 @@
               ></textarea>
             </div>
           </div>
-          <div class="row">
-            <div class="form-check col-lg-12">
+          <div class="row check_box">
+            <div class="form-check col-sm-6">
               <input
                 class="form-check-input"
                 type="checkbox"
-                value="0"
-                id="flexCheckCheckedaccept"
+                value=""
+                id="flexCheckChecked"
                 checked
               />
-              <label class="form-check-label" for="flexCheckCheckedaccept">
-                I accept term & conditions</label
-              >
+              <label class="form-check-label" for="flexCheckChecked">
+                I Accept Terms & Conditions
+              </label>
             </div>
           </div>
         </div>
