--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </div>
             <div class="col-lg-8 mt-2">
               <label for="Gender" class="form-label">Choose Templates</label>
-              <div class="d-flex flex-row gap-2 templates">
+              <div class="d-flex flex-row templates">
                 <div class="form-check col-lg-4 pt-2">
                   <input
                     class="form-check-input"
