--- a/index.html
+++ b/index.html
@@ -222,7 +222,12 @@
               />
             </div>
             <div class="col-sm-3 pt-3 mt-2">
-              <input type="text" class="unit" id="inputtext" value="160cm" />
+              <input
+                type="text"
+                class="form-control unit"
+                id="inputtext"
+                value="160cm"
+              />
             </div>
             <div class="col-sm-3 mt-2">
               <label for="customRange" class="form-label">Weight</label>
@@ -234,7 +239,12 @@
               />
             </div>
             <div class="col-sm-3 pt-3 mt-2">
-              <input type="text" class="unit" id="inputtext" value="68kg" />
+              <input
+                type="text"
+                class="form-control unit"
+                id="inputtext"
+                value="68kg"
+              />
             </div>
           </div>
           <div class="row">
